--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>title</title>
+    <title>cool gaems</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>hello!</h1>
+    <p>chances are, you like roblox games. so heres a bunch of the ones we've made
+         so far!</p>
 </body>
 </html>
