added favicon and short introduction

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <title>cool gaems</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="cool_gaems_logo.png">
 </head>
 <body>
     <h1>hello!</h1>
+    <img src="cool_gaems_logo.png" height="250">
+    <p>welcome to cool gaems! we make cool roblox gaems</p>
     <p>chances are, you like roblox games. so heres a bunch of the ones we've made
          so far!</p>
 </body>
