added font styling and new game page with story details

--- a/index.html
+++ b/index.html
@@ -12,5 +12,13 @@
     <p>welcome to cool gaems! we make cool roblox gaems</p>
     <p>chances are, you like roblox games. so heres a bunch of the ones we've made
          so far!</p>
+         <br>
+         <p>click the gaem logos to learn more about each gaem!</p>
+         <div>
+        <a href="aup.html">
+            <img src="aup-logo.png" alt="Game Logo" height="250">
+        </a>
+    </div>
+    
 </body>
 </html>
