added gallery section and improved styling in aup.html; updated favicon path and added horizontal rule

--- a/aup.html
+++ b/aup.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <title>an untitled platformer</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="aup-logo.png">
+    <link rel="icon" type="image/x-icon" href="aup/aup-logo.png">
 </head>
 <body>
     <h1>an untitled platformer</h1>
+
+    <div>
+    <h2>Gallery</h2>
+    <img src="aup-logo.png" height="250">
+    <p>gaem logo</p>
+    <img src="icon.png" height="500">
+    <p>current gaem icon</p>
+    <hr>
+    </div>
+    
     <h2><em>Story</em></h2>
     <p>In the world of Robloxia, Kir are marvelous things.
         <br>
@@ -19,7 +29,9 @@
         <br>
         One day, all Kir got scattered all over Robloxia!
         <br>
-        Now it must be you who stops Robloxia from feeling sad and unhappy by collecting all of the Kir!.
+        Now it must be you who stops Robloxia from feeling sad and unhappy by collecting all of the Kir!
         </p>
+
+        <a href="index.html">back to home</a>
 </body>
 </html>
