added new wfu.html page with gallery and gameplay instructions; updated icon image in aup.html and added line breaks in index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         <a href="aup.html">
             <img src="aup-logo.png" alt="Game Logo" height="250">
         </a>
+        <br>
+        <a href="wfu.html">
+            <img src="wfu_icon.png" alt="Game Logo" height="445">
+        </a>
     </div>
-
 </body>
 </html>
