--- a/aup.html
+++ b/aup.html
@@ -14,7 +14,7 @@
     <img src="aup-logo.png" height="250">
     <p>gaem logo</p>
     <br>
-    <img src="icon.png" height="500">
+    <img src="aup_icon.png" height="500">
     <p>current gaem icon</p>
     <hr>
     </div>
