updated favicon paths in aup.html and wfu.html

--- a/aup.html
+++ b/aup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>an untitled platformer</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="aup/aup-logo.png">
+    <link rel="icon" type="image/x-icon" href="aup_icon.png">
 </head>
 <body>
     <h1>an untitled platformer</h1>
