--- a/wfu.html
+++ b/wfu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>an untitled platformer</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="aup/aup-logo.png">
+    <link rel="icon" type="image/x-icon" href="wfu_icon.png">
 </head>
 <body>
     <h1>Weapon Fighting Ultimate</h1>
