added funding.html page with gallery and donation information; updated index.html to include funding link

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <a href="wfu.html">
             <img src="wfu_icon.png" alt="Game Logo" height="445">
         </a>
+        <br>
+        <a href="funding.html">
+            <img src="cool-gaems-funding_icon.png" alt="Game Logo" height="445">
+        </a>
     </div>
 </body>
 </html>
