added game links to aup.html, funding.html, and wfu.html for easier access

--- a/funding.html
+++ b/funding.html
@@ -19,5 +19,6 @@
     <h2><em>what it is</em></h2>
     <p>do you like cool gaems's gaems? do you want to see more of them? if so, you can help us out by donating in this gaem. if you do, cool gaems wil have more funding, which means more gaem content!</p>
     <a href="index.html">back to home</a>
+    <h3>Play the game <a href="https://ro.blox.com/Ebh5?af_dp=roblox%3A%2F%2Fnavigation%2Fgame_details%3FgameId%3D6506176032&af_web_dp=https%3A%2F%2Fwww.roblox.com%2Fgames%2F126883476577058">here!</a></h3>
 </body>
 </html>
