--- a/wfu.html
+++ b/wfu.html
@@ -22,6 +22,9 @@
         <br>
         also there's a training area
     </p>
+
+    <h3>Play the game <a href="https://ro.blox.com/Ebh5?af_dp=roblox%3A%2F%2Fnavigation%2Fgame_details%3FgameId%3D6959530605&af_web_dp=https%3A%2F%2Fwww.roblox.com%2Fgames%2F105044113588354">here!</a></h3>
+
     <a href="index.html">back to home</a>
 </body>
 </html>
