--- a/aup.html
+++ b/aup.html
@@ -38,6 +38,8 @@
         Now it must be you who stops Robloxia from feeling sad and unhappy by collecting all of the Kir!
         </p>
 
+        <h3>Play the game <a href="https://ro.blox.com/Ebh5?af_dp=roblox%3A%2F%2Fnavigation%2Fgame_details%3FgameId%3D6718780209&af_web_dp=https%3A%2F%2Fwww.roblox.com%2Fgames%2F79474995917068">here!</a></h3>
+
         <a href="index.html">back to home</a>
 </body>
-</html>
+</html> 
