refactor index.html to replace div with nav for better semantic structure

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          so far!</p>
          <br>
          <p>click the gaem logos to learn more about each gaem!</p>
-         <div>
+         <nav>
         <a href="aup.html">
             <img src="aup-logo.png" alt="Game Logo" height="250">
         </a>
@@ -26,6 +26,6 @@
         <a href="funding.html">
             <img src="cool-gaems-funding_icon.png" alt="Game Logo" height="445">
         </a>
-    </div>
+    </nav>
 </body>
 </html>
