--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     <h1>hello!</h1>
     <img src="cool_gaems_logo.png" height="250">
     <p>welcome to cool gaems! we make cool roblox gaems</p>
-    <p>chances are, you like roblox games. so heres a bunch of the ones we've made
-         so far!</p>
-         <br>
-         <p>click the gaem logos to learn more about each gaem!</p>
-         <nav>
+    <p>chances are, you like roblox games. so heres a bunch of the ones we've made so far!</p>
+    <br>
+    <p>click the gaem logos to learn more about each gaem!</p>
+    <nav>
         <a href="aup.html">
             <img src="aup-logo.png" alt="Game Logo" height="250">
         </a>
