added COOL STUFF

--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
             <img src="cool-gaems-funding_icon.png" alt="Game Logo" height="445">
         </a>
     </nav>
+<h2>COOL STUFF</h2>
+    <img src="Screenshot 2025-03-23 201937.png" height="250">
+    <p>an untitled platformer has 5 likes! (ignore the 1 singular dislike)</p>
 </body>
 </html>
