added guilded join link

--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
 <h2>COOL STUFF</h2>
     <img src="Screenshot 2025-03-23 201937.png" height="250">
     <p>an untitled platformer has 5 likes! (ignore the 1 singular dislike)</p>
+<hr>
+    <a href="https://www.guilded.gg/r/zzjxOAYwqE?i=4ojDLYJA"><img src="guilded logo.png" height="75"></a>
 </body>
 </html>
